fix failing test